--- a/index.ipynb
+++ b/index.ipynb
@@ -172,6 +172,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
+    "    trave\n",
     "    return 'madagascar'"
    ]
   },
@@ -209,7 +210,7 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "dfavorite_destination()\n",
+    "favorite_destination()\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
