--- a/index.ipynb
+++ b/index.ipynb
@@ -172,7 +172,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    trave\n",
+    "    travel_destinations.append('madagascar')\n",
     "    return 'madagascar'"
    ]
   },
