--- a/index.ipynb
+++ b/index.ipynb
@@ -166,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    travel_destinations.append('madagascar')\n",
-    "    return 'madagascar'"
+    "    return travel_destinations[-1]"
    ]
   },
   {
