--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    travel_destinations.title()\n",
-    "    return c"
+    "    return "
    ]
   },
   {
