--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalize_countries = []\n",
-    "    for destination in travel_destinatio\n",
+    "    for destination in travel_destinations:\n",
+    "        cap\n",
     " "
    ]
   },
