--- a/index.ipynb
+++ b/index.ipynb
@@ -240,9 +240,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalize_countries = []\n",
+    "    capitalized_countries = []\n",
     "    for destination in travel_destinations:\n",
-    "        cap\n",
+    "        capitalized_coun\n",
     " "
    ]
   },
