--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,8 @@
     "def capitalize_countries():\n",
     "    capitalized_countries = []\n",
     "    for destination in travel_destinations:\n",
-    "        capitalized_countries.append(destination.ti)\n",
+    "        capitalized_countries.append(destination.title())\n",
+    "    return cap\n",
     " "
    ]
   },
